<resources>
    <string name="app_name">Mobile ECG</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="tab_1">Select User</string>
    <string name="tab_2">Measurement</string>
    <string name="tab_3">History</string>
    <string name="tab_4">Send To Doctor</string>

    <string name="patient">Patient</string>
    <string name="add_new">Add New</string>
    <string name="doctor_to_doctor">Doctor to Doctor</string>
    <string name="find_doctor">Find Doctor</string>
    <string name="history">History</string>
    <string name="log_maintainance">Log Maintainance</string>
    <string name="notification">Notification</string>

    <!---
    For bluetooth
    -->

    <string name="msg_not_connected">not connected</string>
    <string name="msg_connecting">connecting…</string>
    <string name="msg_connected">connected</string>


    <string name="pref_commands_mode">pref_commands_mode</string>
    <string name="pref_commands_ending">pref_commands_ending</string>
    <string name="pref_log_timing">pref_log_timing</string>
    <string name="pref_log_direction">pref_log_direction</string>
    <string name="pref_need_clean">pref_need_clean</string>
    <!-- prefence keys, no translation needed -->

    <string name="action_netcheck">on/off</string>
    <string name="action_bluetooth">on/off</string>
    <string name="no_bt_support">Your device doesn\'t support bluetooth.</string>
    <string name="empty_device_name">&lt;New device&gt;</string>

    <string name="menu_send">Send log…</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_clear">Clear history</string>

    <string name="select_device">Select device</string>
    <string name="search_message">Search for devices…</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="title_other_devices">Other devices</string>
    <string name="none_paired">No paired devices</string>
    <string name="none_found">Not found</string>
    <string name="command_hint">Enter command here</string>
    <string name="button_send">Send</string>

    <!-- Настройки -->
    <string name="log_settings_category">Command history:</string>

    <string name="log_time">Time</string>
    <string name="log_time_summary">Show time in log</string>
    <string name="log_direction">Direction</string>
    <string name="log_direction_summary">Show I/O direction in log</string>

    <string name="commands_mode">Input mode:</string>
    <string name="commands_mode_summary">Select input mode</string>
    <string name="commands_ending_summary">Select ending</string>

    <string name="need_clean">Clear previous command</string>
    <string name="need_clean_summary">Cleanup command view after sending</string>
    <string name="name">Name</string>
</resources>
