<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_user"
            android:icon="@drawable/ic_adduser"
            android:title="@string/add_new" />
        <item
            android:id="@+id/find_doctor"
            android:icon="@drawable/doctor_search"
            android:title="@string/find_doctor" />
        <item
            android:id="@+id/doctor_to_doctor"
            android:icon="@drawable/physician_icon"
            android:title="@string/doctor_to_doctor" />
        <item
            android:id="@+id/notification"
            android:icon="@drawable/ic_notification"
            android:title="@string/notification"/>
    </group>

    <item android:title="@string/patient">
        <menu>
            <item
                android:id="@+id/log_maintainance"
                android:icon="@drawable/log_maintain"
                android:title="@string/log_maintainance" />
            <item
                android:id="@+id/history_patient"
                android:icon="@drawable/ic_history"
                android:title="@string/history" />
        </menu>
    </item>
    <item>
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/about"
                android:title="About"
                />
        </menu>
    </item>


</menu>
