<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/net_check"
        android:icon="@drawable/net_check"
        app:showAsAction="ifRoom"
        android:title="@string/action_netcheck" />
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_bluetooth"
        app:showAsAction="ifRoom"
        android:title="@string/action_bluetooth" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/sbout"
        android:orderInCategory="100"
        android:title="About"
        app:showAsAction="never" />
</menu>
